# NLP-Exercise-1

./: NLP_HW1_NTHU_113065892.py  main_without_extra_exp.ipynb  pyproject.toml  requirements.txt
NLP-Exercise-1/: .gitignore  main.ipynb
