[project]
name = "nlp-exercise-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-langdetect>=1.0.0",
    "gdown>=5.2.0",
    "gensim>=4.3.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "spacy[cuda11x]>=3.8.7",
    "tqdm>=4.67.1",
]
